todo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: assets
          persistentVolumeClaim:
              claimName: todo-claim
      containers:
      - name: todo
        image: koxanybak/todo
        volumeMounts:
          - mountPath: /srv/assets
            name: assets
