todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
