todo/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ing
  namespace: project
spec:
  backend:
    serviceName: todo-api-svc
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-svc
          servicePort: 80
      - path: /api/
        backend:
          serviceName: todo-api-svc
          servicePort: 80
